Fixed list scroll on ios

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -2567,18 +2567,6 @@ html, body, .o-base-container {
 	}
 }
 
-.basePanel, .bodyContents, .mainContainer, .contentsDiv {
-	min-height: 100%;
-}
-
-.bodyContent {
-	min-height: 100%;
-	height: 100%;
-	margin-top: 0;
-	padding-top: 0;
-	padding-bottom: 15px;
-}
-
 .companyLogoContainer {
 	display: block;
 	width: 48px;
